k8s/nextjs-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: deploy-services
  labels:
    app: nextjs-service
spec:
  type: ClusterIP
  selector:
    app: nextjs-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
      name: http
